--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "rabdapi",
-  "version": "1.0.1",
-  "main": "index.js",
+  "name": "@rabdhq/sdk",
+  "version": "1.0.0",
+  "main": "lib/index.js",
   "scripts": {
-    "dev": "nodemon ./index.js",
+    "build": "tsc",
+    "dev": "nodemon --config nodemon.json src/test.ts",
     "start": "node ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ship": "yarn build && npm publish --access public"
   },
   "author": "imacodr",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/node": "^14.14.41",
+    "@types/node-fetch": "^2.5.10",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "node-fetch": "^2.6.1"
