--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "target": "es2017"
   },
   "compileOnSave": true,
